Fixed z-index conflicts.

--- a/djangoerp/themes/default/static/css/default.css
+++ b/djangoerp/themes/default/static/css/default.css
@@ -57,7 +57,7 @@
     top: 50px;
     bottom: 50px;
     left: -100%;
-    z-index: 102;
+    z-index: 12;
     margin: 0;
     padding: 0;
     border-top: 8px solid #db2828;
@@ -101,7 +101,7 @@
     top: 50px;
     left: 0;
     right: 0;
-    z-index: 101;
+    z-index: 11;
     margin: 0 !important;
     background-color: #fff;
     border-bottom: 1px solid rgba(0,0,0,.15);
